--- a/main.css
+++ b/main.css
@@ -1,1 +1,17 @@
-/*# sourceMappingURL=main.css.map */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+body {
+  background: #080808;
+  color: #fff;
+}
+#header {
+  width:100%;
+  height: 100vh;
+  background-image: url(images/background.jpg);
+  background-size: cover;
+  background-position: center;
+}
