--- a/main.css
+++ b/main.css
@@ -160,7 +160,7 @@ nav ul li a:hover::after {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .services-list div {
@@ -168,7 +168,8 @@ nav ul li a:hover::after {
   padding: 40px;
   font-size: 13px;
   font-weight: 300;
-  border-right:10px;
+  border-radius:10px;
+  transition: background 0.5s, transform 0.5s;
 }
 
 .services-list div i {
@@ -176,13 +177,13 @@ nav ul li a:hover::after {
   margin-bottom: 30px;
 }
 
-.services-title div h2 {
+.services-list div h2 {
   font-size: 30px;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 15;
 }
 
-.services-title div a {
+.services-list div a {
   text-decoration: none;
   color:#fff;
   font-size: 12px;
@@ -190,4 +191,34 @@ nav ul li a:hover::after {
   display: inline-block;
 }
 
+.services-list div:hover {
+  background: #ff004f;
+  transform: translateY(-10px);
+}
+
+
+/* -----------portfolio------------ */
+
+#porfolio {
+  padding: 50px 0;
+}
+
+.work-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+}
+
+.work {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.work img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+}
 
