--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ nav ul li a:hover::after {
 .services-list div h2 {
   font-size: 30px;
   font-weight: 500;
-  margin-bottom: 15;
+  margin-bottom: 20;
 }
 
 .services-list div a {
@@ -192,7 +192,7 @@ nav ul li a:hover::after {
 }
 
 .services-list div:hover {
-  background: #ff004f;
+  background: rgba(255, 0, 81, 0.911);
   transform: translateY(-10px);
 }
 
@@ -211,7 +211,7 @@ nav ul li a:hover::after {
 }
 
 .work {
-  border-radius: 10px;
+  border-radius: 11px;
   position: relative;
   overflow: hidden;
 }
