--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #080808;
   color: #fff;
@@ -68,7 +73,7 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 span {
-  color: rgba(233, 6, 6, 0.897);
+  color: rgba(233, 6, 6, 0.8);
 }
 
 /* ---------about---------- */
@@ -314,6 +319,10 @@ form .submit-btn {
   margin-top: 20px;
   cursor: pointer;
 }
+form .submit-btn:hover {
+  font-size: 20px;
+  padding: 15px 62px;
+}
 
 .copyright {
   width: 100%;
@@ -322,4 +331,79 @@ form .submit-btn {
   background: rgba(56, 34, 34, 0.6);
   font-weight: 300;
   margin-top: 20px;
+}
+
+/* ----------------small screen--------------- */
+
+nav .fas {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  #header {
+    background-image: url(images/small_background);
+  }
+  .header-text {
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  nav .fas {
+  display: block;
+  font-size: 25px;
+}
+  nav ul {
+    background: rgba(212, 3, 69, 0.99);
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fas {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+
+  .sub-title {
+    font-size: 40px;
+  }
+  .about-col-1, .about-col-2 {
+    flex-basis: 100%;
+  }
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
+  .about-col-2 {
+    font-size: 14px;
+  }
+
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+
+  .contact-left, .contact-right {
+    flex-basis: 100%;
+  }
+  .copyright {
+    font-size: 14px;
+  }
+}
+
+#form-message {
+  color: rgba(97, 183, 82, 0.9);
+  margin-top: -40px;
+  display: block;
 }
