--- a/main.css
+++ b/main.css
@@ -7,7 +7,20 @@
 body {
   background: #080808;
   color: #fff;
+  margin: 0;
+  padding: 0;
 }
+
+#fluid {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 0;
+  pointer-events: none;
+}
+
 #header {
   width:100%;
   height: 100vh;
